added border to buttons when hover

--- a/google/index.html
+++ b/google/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Foogle is a website that was built to practice different CSS and HTML techniques">
+    <meta name="author" content="Pete Looney">
     <title>Foogle</title>
     <link rel="shortcut icon" href="g.webp" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
@@ -11,14 +13,14 @@
 <body>
     <div class="nav row">
         <div class="left-stuff row">
-            <div class="about">About</div>
-            <div class="store">Store</div>
+            <div class="about"><a href="#">About</a></div>
+            <div class="store"><a href="#">Store</a></div>
         </div>
         <div class="right-stuff row">
-            <div class="gmail">Gmail</div>
-            <div class="images">Images</div>
-            <div class="apps"><img src="icon-apps.png" alt="an apps image"></div>
-            <div class="p">P</div>
+            <div class="gmail"><a href="#">Gmail</a></div>
+            <div class="images"><a href="#">Images</a></div>
+            <div class="apps"><a href="#"><img src="icon-apps.png" alt="an apps image"></a></div>
+            <div class="p"><a href="#">P</a></div>
         </div>
     </div>
     <div class="container">
@@ -37,14 +39,14 @@
     </div>
     <div class="foot row">
         <div class="left-bottom row">
-            <div class="Advertising">Advertising</div>
-            <div class="Business">Business</div>
-            <div class="How">How Search works</div>
+            <div class="Advertising"><a href="#">Advertising</a></div>
+            <div class="Business"><a href="#">Business</a></div>
+            <div class="How"><a href="#">How Search works</a></div>
         </div>
         <div class="right-bottom row">
-            <div class="privacy">Privacy</div>
-            <div class="terms">Terms</div>
-            <div class="settings">Settings</div>
+            <div class="privacy"><a href="#">Privacy</a></div>
+            <div class="terms"><a href="#">Terms</a></div>
+            <div class="settings"><a href="#">Settings</a></div>
         </div>
     </div>
 </body>
