added more about the author

--- a/medium/index.html
+++ b/medium/index.html
@@ -21,7 +21,16 @@
     <div class="author">
         <img src="./profile-icon.png" alt="picture of the fake blog poster">
         <div class="info">
-            
+            <div class="top line">
+                <div class="name">TJ Holowaychuk</div>
+                <div class="follow">Follow</div>
+            </div>
+            <div class="second line">Code. Photography. Art.</div>
+            <div class="third line">
+                <p>Jun 16</p>
+                <span>.</span>  
+                <p>7 min read</p>
+            </div>
         </div>
     </div>
 </body>
